<resources>
    <string name="app_name">FirebaseNotes</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="do_not_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="already_a_member">Bạn đã có tài khoản?</string>
    <string name="register_here">Đăng ký ngay</string>
    <string name="login_here">Đăng nhập ngay</string>
    <string name="register_new_account">Đăng ký thành viên</string>
    <string name="helper_password">* Mật khẩu chứa ít nhật 6 ký tự</string>
    <string name="close">Đóng</string>
    <string name="logout">Đăng xuất</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="send_mail">Gửi</string>
    <string name="reset_password">Khôi phục mật khẩu</string>
    <string name="helper_forget_password">
        Vui lòng nhập Email bạn đã dùng để khôi phục mật khẩu.
    </string>
</resources>